tests/compile-fail/match_guard_not_exhaustive.lm
enum E { A, B }

fn main() {
  let e: E = A;
  match e {
    A if true => 1
    B if true => 2
  };
}
